Migrate to Flask

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Nebulas Notarizer</title>
     <!-- CSS dependencies -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/bootstrap-4.0.0.min.css">
-    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="static/css/bootstrap-4.0.0.min.css">
+    <link rel="stylesheet" href="static/css/main.css" type="text/css">
 </head>
 <body>
     <!--Header-->
@@ -79,11 +79,11 @@
         </div>
     </nav>
 
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/popper-1.12.9.min.js"></script>
-    <script src="js/bootstrap-4.0.0.min.js"></script>
-    <script src="js/sha256.min.js"></script>
-    <script src="js/nebPay.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="static/js/jquery-3.2.1.min.js"></script>
+    <script src="static/js/popper-1.12.9.min.js"></script>
+    <script src="static/js/bootstrap-4.0.0.min.js"></script>
+    <script src="static/js/sha256.min.js"></script>
+    <script src="static/js/nebPay.min.js"></script>
+    <script src="static/js/main.js"></script>
 </body>
 </html>
